# bsky-quote-explorer

./: Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: images.yaml
migrations/: 20240602011813_basic_structure.down.sql  20240602011813_basic_structure.up.sql  20240602193349_replies.down.sql  20240602193349_replies.up.sql  20240602214539_fix_root_foreign_key.up.sql
queries/did/: lookup.sql  save.sql
queries/info/: get_edges.sql  get_id.sql  get_nodes.sql
queries/tree/: get_thread_node.sql  insert_thread_edge.sql  insert_thread_node.sql  known_nodes.sql  new.sql
src/: main.rs
static/: app.css  app.js  index.html
templates/: index.html
