[package]
name = "bsky-quote-explorer"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Syfaro <syfaro@huefox.com>"]
publish = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true

[dependencies]
async-nats = "0.35.1"
atrium-api = { version = "0.22.2", default-features = false, features = ["namespace-appbsky"] }
axum = "0.7.5"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.30"
lru = "0.12.3"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_plain = "1.0.2"
sqlx = { version = "0.6.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "offline"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
